# pacascope

./: .gitignore  Cargo.toml  env.example
src/: main.rs
src/api/: alpaca.rs  client.rs  mod.rs
src/config/: mod.rs
src/data/: cache.rs  log_parser.rs  mod.rs  portfolio.rs
src/ui/: app.rs  charts.rs  dashboard.rs  mod.rs  widgets.rs
